--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!--Imports various styling elements from Bootstrap for use within the app-->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <title>Document</title>
+    <title>URL Shortener</title>
 </head>
 <body>
 
+    <!--This area controls where the user inputs their long URL to be shortened-->
     <div class="container">
     <h1>URL Shortener</h1>
     <form action="/shortUrls" method="POST" class ="my-4 form-inline">
@@ -17,6 +19,7 @@
         <button class ="btn btn-success" type = "submit">Shorten</button>
     </form>
 
+    <!--Contains a table where shortened urls are stored and displayed-->
     <table class = "table table-striped table-responsive"> 
         <thead>
             <tr>
